minor minor update
gitignore

and new favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
+		<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='K_favicon.ico') }}">
 		<title>K</title>
 		<meta charset="utf-8">
 		<title></title>
